--- a/templates/gk_news2/css/override.css
+++ b/templates/gk_news2/css/override.css
@@ -55,12 +55,50 @@ ul.sigFreeClassic li.sigFreeThumb {
   top: -90px;
 }
 
+.gkMenu > ul > li > a {
+  padding: 0 10px;
+}
+
+#gkLogin {
+  padding: 0 19px;
+}
+
 /* Logo -------------------------------------------------------------------------------------------------------*/
 #gkLogoSmall {
   width: 200px;
+  margin-right:8px;
 }
 #gkLogo {
   height: 80px;
-  margin: 5px 0 5px 0;
+  margin: 30px 0 10px 0;
+  width:250px;
+}
+
+#gkLogoSmall:hover img, #gkLogo:hover img{
+    -webkit-filter: grayscale(100%);
+    -webkit-filter: grayscale(1);
+    filter: grayscale(100%);
+
+	transition-duration: 1s;
+    
+    filter: url('url("data:image/svg+xml;utf8,<svg%20xmlns='http://www.w3.org/2000/svg'><filter%20id='grayscale'><feColorMatrix%20type='matrix'%20values='0.3333%200.3333%200.3333%200%200%200.3333%200.3333%200.3333%200%200%200.3333%200.3333%200.3333%200%200%200%200%200%201%200'/></filter></svg>#grayscale");')
+    filter: gray;
+    
+
+}
+
+#gkLogo:hover:before{
+    content:"ΑΡΧΙΚΗ ΣΕΛΙΔΑ";
+    position:absolute;
+    top:-10px;
+    color:#eb1e00;
+    text-indent:0;
+
+}
+
+/* Banners -------------------------------------------------------------------------------------------------------*/
+div.banneritem {
+  border: 0;
+  padding: 0;
 }
 
