added advert here banner

--- a/templates/gk_news2/css/override.css
+++ b/templates/gk_news2/css/override.css
@@ -313,6 +313,10 @@ overflow:hidden;
 #gkSocial a:hover i.fa.fa-instagram {
     color: #125688;
 }
+#gkSocial a:hover i.fa.fa-google-plus {
+    color: #db4b39;
+}
+
 
 /*Weather -------------------------------------------------------------------------------------------------*/
 
