--- a/templates/gk_news2/css/override.css
+++ b/templates/gk_news2/css/override.css
@@ -65,8 +65,9 @@ ul.sigFreeClassic li.sigFreeThumb {
 
 /* Logo -------------------------------------------------------------------------------------------------------*/
 #gkLogoSmall {
-  width: 200px;
+  width: 185px;
   margin-right:8px;
+  margin-top:10px;
 }
 #gkLogo {
   height: 80px;
