--- a/templates/gk_news2/css/override.css
+++ b/templates/gk_news2/css/override.css
@@ -699,3 +699,7 @@ li.sp-events-item-info-category a:hover{
 	left:0px !important;
 }
 }
+
+
+/* Contact Form -------------------------------*/
+.contact h3{display:none;}
